stash changes commmit

--- a/simple.html
+++ b/simple.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title> JOHNCENA YNR</title>
+	<title> YNR is AWS Cloud Engineer</title>
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<style>
 		body {
